--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,32 +1,16 @@
-name: Update WakaTime Stats
+name: Waka Readme
 
 on:
   schedule:
-    # Actualizar las estadísticas diariamente a las 12:00 UTC
-    - cron: '0 12 * * *'
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
   workflow_dispatch:
-
 jobs:
   update-readme:
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Update WakaTime stats
-        uses: matchai/waka-box@master
-        env:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-
-      - name: Commit changes
-        run: |
-          git config --local user.name "waka-box"
-          git config --local user.email "waka-box@example.com"
-          git add images/wakatime_weekly_stats.svg
-          git commit -m "Update WakaTime stats"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - uses: anmol098/waka-readme-stats@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
