--- a/.github/workflows/Waka_Stats.yml
+++ b/.github/workflows/Waka_Stats.yml
@@ -1,8 +1,9 @@
-name: Update README
+name: Update Wakatime
 
 on:
   schedule:
     - cron: '0 0 * * 0'  # Cada domingo a las 00:00 UTC
+  workflow_dispatch:
 
 jobs:
   update-readme:
