--- a/.github/workflows/Waka_Stats.yml
+++ b/.github/workflows/Waka_Stats.yml
@@ -1,9 +1,9 @@
-name: Update Wakatime
+name: Update README with Wakatime Stats
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Cada domingo a las 00:00 UTC
-  workflow_dispatch:
+    - cron: '0 0 * * 0'  # Ejecuta cada domingo a las 00:00 UTC
+  workflow_dispatch:  # Permite ejecutar manualmente
 
 jobs:
   update-readme:
@@ -16,20 +16,21 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '14'  # Cambia a la versión de Node.js que necesites
+        node-version: '16'
 
     - name: Install dependencies
       run: npm install
 
     - name: Run update script
       env:
-        WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} 
-      run: node scripts/waka-update.cjs
+        WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}  # Carga el secreto de GitHub
+      run: node update-readme.cjs
 
     - name: Commit and push changes
       uses: EndBug/add-and-commit@v9
       with:
         add: 'README.md'
-        message: 'Update README with latest Wakatime and GitHub stats'
+        message: 'Update README with latest Wakatime stats'
         author_name: 'github-actions'
         author_email: 'github-actions@github.com'
+
