--- a/.github/workflows/wakatime-stats.yml
+++ b/.github/workflows/wakatime-stats.yml
@@ -2,7 +2,7 @@ name: Update Wakatime Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight
+    - cron: '0 12 * * 0'  # Runs every sunday at 12p.m
   workflow_dispatch:
 
 jobs:
