--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -20,9 +20,9 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: -> # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
+          BLOCKS: █░ # optional
+          TIME_RANGE: this_week # optional
+          LANG_COUNT: 5 # optional
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
