--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   schedule:
     # runs at 12 AM UTC (5:30 AM IST)
-    - cron: "0 0 * * *"
+    - cron: '0 6 * * 1'
 
 jobs:
   update-readme:
@@ -20,7 +20,7 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: █░ # optional
+          BLOCKS: ░█ # optional
           TIME_RANGE: this_week # optional
           LANG_COUNT: 5 # optional
           SHOW_TIME: true # optional
